# ngyn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: windowConfig.json
examples/: CMakeLists.txt  main.cpp  texture_example.cpp
src/: CMakeLists.txt  ngynpch.hpp
src/core/: engine.cpp  engine.hpp  window.cpp  window.hpp
src/ngyn/components/: camera.cpp  camera.hpp  frame.cpp  frame.hpp  transform.cpp  transform.hpp
src/ngyn/core/: engine.cpp  engine.hpp  input.cpp  input.hpp  mouse.cpp  mouse.hpp  time.cpp  time.hpp  window.cpp  window.hpp
src/ngyn/elements/: animated_sprite.cpp  animated_sprite.hpp  elements_enums.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp
src/ngyn/renderers/: quad_renderer.cpp  quad_renderer.hpp  render_instance.hpp  renderer.hpp
src/ngyn/resources/: font.cpp  font.hpp  resources_manager.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/ngyn/util/: color.cpp  color.hpp  files.cpp  files.hpp  logger.hpp  random.cpp  random.hpp  strings.cpp  strings.hpp
src/resources/: shader.cpp  shader.hpp
src/util/: files.cpp  files.hpp  logger.cpp  logger.hpp  strings.cpp  strings.hpp
tests/: CMakeLists.txt  files_tests.cpp  input_tests.cpp  logger_tests.cpp  main.cpp  quad_renderer_tests.cpp  random_tests.cpp  shader_tests.cpp  strings_tests.cpp  texture_tests.cpp  window_tests.cpp
tests/components/: CMakeLists.txt  camera_tests.cpp  frame_tests.cpp  transform_tests.cpp
tests/core/: CMakeLists.txt  input_tests.cpp  window_tests.cpp
tests/elements/: CMakeLists.txt  animated_sprite_tests.cpp  sprite_tests.cpp  text_tests.cpp
tests/renderers/: CMakeLists.txt  quad_renderer_tests.cpp
tests/resources/: CMakeLists.txt  font_tests.cpp  resources_manager_tests.cpp  shader_tests.cpp  texture_tests.cpp
tests/util/: CMakeLists.txt  color_tests.cpp  files_tests.cpp  logger_tests.cpp  random_tests.cpp  strings_tests.cpp
